--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "chai": "^3.5.0",
     "enzyme": "^2.7.0",
     "expect": "^1.20.2",
+    "mocha-multi": "^1.0.1",
+    "npm": "^6.1.0",
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.2",
